--- a/common/pom.xml
+++ b/common/pom.xml
@@ -35,5 +35,15 @@
             <scope>annotationProcessor</scope>
         </dependency>
 
+        <!-- minio        -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
