--- a/web/pom.xml
+++ b/web/pom.xml
@@ -48,6 +48,12 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
+
+        <!-- minio        -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- Spring Boot 提供的打包插件，用於打包可執行的 jar 包 -->
